fixed alignment of logo

--- a/client/src/styling/index.css
+++ b/client/src/styling/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nav-bar {
-  position: relative;
+  /* position: relative; */
   top: 0;
   left: 0;
   width: 100%;
@@ -17,32 +17,38 @@ body {
 }
 .nav-bar ul {
   height: 100px;
+  padding: 0;
 }
 
 .menu {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-around;
   list-style: none;
-  padding: 0 10rem;
+  /* align-items: center; */
+  /* padding: 0 10rem; */
   margin: 3rem 0 0 0;
-  position: relative;
+  /* position: relative; */
 }
 
 .menu__link {
   color: #151515;
-  display: inline-block;
   height: 100%;
   font-size: 16px;
   font-weight: 600;
   text-decoration: none;
   display: flex;
   align-items: center;
-  padding: 0 3px;
 }
 
 .logo-img {
   height: 100%;
-  justify-content: center;
+  width: 50%;
+}
+
+.logo-list-item {
+  /* width:0% */
+  text-align: center;
 }
 
 .menu__link:hover {
